# semble

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.entire/: settings.json
.github/workflows/: weekly-release.yml
docs/: api.md  architecture.md  builder-policies.md  decision-log.md  development.md  host-operations.md  microvm-guest-lifecycle.md  provisioning-flows.md  releasing.md  roadmap.md  terminology.md  vision.md  weekly-release-workflow.md
docs/adr/: 0001-host-modules-and-inputmodules-composition-layers.md  0002-v0.2.0-composition-layering-and-duplicate-rules.md  0003-v0.3.0-project-overlays.md  TEMPLATE.md
docs/proposals/: 0001-microvm-provision-script-migration.md  0002-host-type-strategy-dispatch.md  0003-host-key-types.md  0004-host-create-template-selection.md  0005-auto-detect-provision-encryption-keys.md  0006-ssh-key-shared-directory.md  0007-provision-config-in-host-definition.md  0008-host-operator-metadata-in-default.md  README.md
nix/: checks.nix  devShells.nix  lib.nix  packages.nix  withOverlays.nix
nix/apps/: semble.nix  setup-entire.nix
nix/checks/: default.nix
nix/config/: agent-skills-config.nix  setup-entire-config.nix
nix/confix/: opencode.nix
nix/devShells/: default.nix
nix/lib/: default.nix  discovery.nix  flake.nix  resolution.nix  shared.nix
src/: cli.rs  config.rs  confirm.rs  delegate.rs  error.rs  host.rs  image.rs  keys.rs  lib.rs  main.rs  microvm.rs  repo.rs  sops.rs  ssh.rs  ssh_config.rs  template.rs
tests/: config_error_messages.rs  host_create_template.rs  host_key_integration.rs
(+41 files in other folders)
