[package]
name = "semble"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tianyi = { git = "https://github.com/rencire/tianyi", rev = "2e1f7c542394671ecb918cd635396a1c39ecb65e" }
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.27.0"
